# learn-learnosity

./: LICENSE  README.md  pyproject.toml
learn_learnosity/: db.sqlite3  manage.py
learn_learnosity/assessment/: learnosity.py  urls.py  views.py
learn_learnosity/home/: urls.py  views.py
learn_learnosity/learn_learnosity/: asgi.py  settings.py  urls.py  wsgi.py
learn_learnosity/static/: staticfiles.json
learn_learnosity/static/css/: custom.css  style.css
learn_learnosity/staticfiles/css/: booked.css  custom.css  style.css
learn_learnosity/staticfiles/css/maps/: booked.css.map  style.css.map
learn_learnosity/staticfiles/img/: about-image.tiff  home-animation.webm
learn_learnosity/staticfiles/js/: init.js
learn_learnosity/staticfiles/js/maps/: core.js.map
learn_learnosity/templates/: about.html  assessmentBase.html  blog-left-sidebar.html  blog-right-sidebar.html  booking-appointments.html  booking-form.html  booking-login.html  booking-profile.html  features-404.html  features-faqs.html  features-pricing.html  features-shortcodes.html  features-typography.html  home.html  items-api-assessment.html  page-about.html  page-contacts.html  room-blocks.html  room-grid-2cols.html  room-grid-3cols.html  room-grid-4cols.html  room-grid-nomargins.html  room-list.html  room-modern.html  room-single.html
learn_learnosity/templates/includes/: base.html  footer.html  header-nav.html  scripts.html  slider.html  styles.html
