[tool.poetry]
name = "learn-learnosity"
version = "0.1.0"
description = "Django-based assessment on how to implement, author and deploy custom assessment content with the Learnosity APIs."
authors = ["Learnosity Application Support Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "learn_learnosity"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
python-dotenv = "^1.0.0"
whitenoise = "^6.5.0"
learnosity-sdk = "^0.3.3"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
black = "^23.7.0"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
